<resources>

    <string name="app_name">CAPE Demo Android</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_cape_demo">CAPE Demo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="get_contacts">Get Contacts</string>
    <string name="use_actual_location">Use actual location</string>
    <string name="move_away">Move away</string>
    <string name="disconnect">Disconnect</string>
    <string name="ok">OK</string>
    
</resources>